<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_workout_creator2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.trainingsapp.chrisals.dyel20.WorkoutCreatorActivity">

    <TextView
        android:textColor="#000000"
        android:textSize="24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/workout_name_input"/>

    <CheckBox
        android:text="@string/monday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/checkbox_monday"
        android:onClick="onCheckBoxClick"/>

    <CheckBox
        android:text="@string/tuesday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/checkbox_tuesday"
        android:onClick="onCheckBoxClick"/>

    <CheckBox
        android:text="@string/wednesday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/checkbox_wednesday"
        android:onClick="onCheckBoxClick"/>

    <CheckBox
        android:text="Thursday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/checkbox_thursday"
        android:onClick="onCheckBoxClick"/>

    <CheckBox
        android:text="@string/friday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/checkbox_friday"
        android:onClick="onCheckBoxClick"/>

    <CheckBox
        android:text="Saturday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/checkbox_saturday"
        android:onClick="onCheckBoxClick"/>

    <CheckBox
        android:text="Sunday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/checkbox_sunday"
        android:checked="false"
        android:onClick="onCheckBoxClick"/>

    <Button
        android:text="Add Exercises"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:onClick="addExercises"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/exercise_list_view">




        </ListView>
    </FrameLayout>


</LinearLayout>
